@@ -24,6 +24,8 @@
 - added: `route.groups` with defined groups
 - added: `DatabaseBuilder.insert(fn(doc))` can modify a document after `update` or `modify` has `insert` mode
 - added: `DatabaseBuilder.query(code)` can contain a raw JS condition in the form e.g. `doc.age > 18 && doc.age < 33`
+- added: `DatabaseBuilder.regexp(name, regexp)` RegExp search in strings
+- added: `DatabaseBuilder.fulltext(name, regexp, [weight])` full text search in strings, more info in docs.
 - added: `Database.find2()` performs faster and reverse reading of documents (from end to begin of the file)
 - added: `Database.stream(fn, [repository], [callback(err, repository, count)])` for streaming documents
 - added: `Database.lock(callback(next))` locks all internal DB operations
